# gcs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  gist.rs  main.rs  manifest.rs  sync.rs
